# nolifebar

./: .gitignore  COPYING  Makefile.am  README  README.md  configure.ac  flake.nix  shell.nix
.github/workflows/: build-and-test.yml
lib/dzen2-status-bar/: Makefile.am  cfg-dzen2-graph-test.rc  cfg-top-bar.rc  functions  mod_cava_in  mod_cava_out  mod_cpu_bars  mod_mem  mod_network  mod_nvidia  mod_openvpn  mod_time  mod_xtitle  sc.functions
lib/nolifebar/: Makefile.am  cfg-dzen2-graph-test.rc  cfg-top-bar.rc  functions  mod_cava_in  mod_cava_out  mod_cpu_bars  mod_disk_io  mod_mem  mod_network  mod_nvidia  mod_openvpn  mod_pulse  mod_time  mod_ua_alerts  mod_xkbd  mod_xtitle  mod_xworkspaces  sc.functions  themes
src/: dzen2-merge-pipes.c  dzen2-throttle.c  dzen2-workspaces.c  dzen2-xtitle.c  nolifebar-fn-xft.c  nolifebar-kbd.c  nolifebar-pa-status.c  nolifebar-replacer.c  nolifebar-workspaces.c
test/: 01-functions.spec.bash  02-replacer.spec.bash  test-functions
