pluginsdir = $(prefix)/lib/nolifebar
dist_plugins_SCRIPTS = functions \
	mod_cava_in \
	mod_cava_out \
	mod_cpu_bars \
	mod_mem \
	mod_network \
	mod_nvidia \
	mod_openvpn \
	mod_time \
	mod_xtitle \
	mod_xworkspaces \
	cfg-dzen2-graph-test.rc \
	cfg-top-bar.rc

EXTRA_DIST = $(dist_plugins_SCRIPTS)
