pluginsdir = $(prefix)/lib/nolifebar
dist_plugins_SCRIPTS = \
	functions \
	sc.functions \
	cfg-top-bar.rc \
	mod_cava_in \
	mod_cava_out \
	mod_cpu_bars \
	mod_mem \
	mod_network \
	mod_nvidia \
	mod_openvpn \
	mod_pulse \
	mod_time \
	mod_xkbd \
	mod_xtitle \
	mod_xworkspaces

EXTRA_DIST = $(dist_plugins_SCRIPTS)
